fantasy-realm/fantasy-realm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fantasy-realm
  labels:
    istio.io/dataplane-mode: ambient
