fantasy-realm/fantasy-realm/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fantasy-realm-redis-deployment
  namespace: fantasy-realm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fantasy-realm-redis
  template:
    metadata:
      labels:
        app: fantasy-realm-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: redis
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: redis
            initialDelaySeconds: 15
            periodSeconds: 20
