fantasy-realm/fantasy-realm/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fantasy-realm-server-deployment
  namespace: fantasy-realm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fantasy-realm-server
  template:
    metadata:
      labels:
        app: fantasy-realm-server
    spec:
      containers:
        - name: fantasy-realm-server
          image: ghcr.io/bonzonkim/fantasy-realm/fantasy-realm:1.0.1
          imagePullPolicy: Always
          command:
            - pnpm
          args:
            - start:server
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
      imagePullSecrets:
        - name: fantasy-realm-packages
