fantasy-realm/fantasy-realm/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: fantasy-realm-redis-service
  namespace: fantasy-realm
spec:
  selector:
    app: fantasy-realm-redis
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
